# src/infrastructure/http/routes/user.routes.ts
@@ -1,12 +1,16 @@
 import { Router } from 'express';
 import { makeUserController } from '@main/factories/makeUserController.factory';
 import { validateRequest } from '../middlewares/validateRequest';
-import { createUserSchema, getUserByIdSchema } from '../schemas/user.schema';
+import {
+  createUserSchema,
+  getUserByIdSchema,
+  authenticateSchema,
+} from '../schemas/user.schema';
 
 const userRoutes = Router();
 const userController = makeUserController();
 
-userRoutes.get('/', (req, res) => {
+userRoutes.get('/', (req, res, next) => {
   /*
     #swagger.tags = ['Users']
     #swagger.summary = 'Lista todos os usuários'
@@ -28,13 +32,13 @@ userRoutes.get('/', (req, res) => {
       }
     }
   */
-  return userController.list(req, res);
+  return userController.list(req, res, next);
 });
 
 userRoutes.post(
   '/',
   validateRequest({ body: createUserSchema }),
-  (req, res) => {
+  (req, res, next) => {
     /*
     #swagger.tags = ['Users']
     #swagger.summary = 'Cria um novo usuário'
@@ -69,7 +73,7 @@ userRoutes.post(
       }
     }
   */
-    return userController.create(req, res);
+    return userController.create(req, res, next);
   },
 );
 
@@ -108,6 +112,58 @@ userRoutes.get(
     }
     */
     return userController.getById(req, res, next);
+  },
+);
+
+userRoutes.post(
+  '/authenticate',
+  validateRequest({ body: authenticateSchema }),
+  (req, res, next) => {
+    /*
+    #swagger.tags = ['Users']
+    #swagger.summary = 'Autentica um usuário'
+    #swagger.description = 'Valida as credenciais (e-mail e senha) e retorna o perfil do usuário acompanhado do Token JWT para acesso a rotas protegidas.'
+
+    #swagger.requestBody = {
+      required: true,
+      content: {
+        'application/json': {
+          schema: { $ref: '#/components/schemas/AuthenticateUserDto' }
+        }
+      }
+    }
+
+    #swagger.responses[200] = {
+        description: 'Autenticação realizada com sucesso.',
+        schema: {
+          user: {
+            id: 'uuid-do-usuario',
+            name: 'Ash Ketchum',
+            email: 'ash@pokemanager.com',
+            role: 'USER'
+          },
+          token: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'
+        }
+      }
+
+      #swagger.responses[400] = {
+        description: 'Erro de Validação da Borda (Zod).',
+        schema: {
+          status: 'error',
+          message: 'Dados de entrada inválidos',
+          details: [{ field: 'email', message: 'E-mail em formato inválido' }]
+        }
+      }
+
+      #swagger.responses[401] = {
+        description: 'Credenciais inválidas (E-mail ou senha incorretos).',
+        schema: {
+          status: 'error',
+          message: 'Credenciais inválidas'
+        }
+      }
+    */
+    return userController.authenticate(req, res, next);
   },
 );
 
